role modal start work

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,7 @@
         <script src="{% static 'js/work_profile.js' %}"></script>
         <script src="{% static 'js/scenario.js' %}"></script>
         <script src="{% static 'js/step.js' %}"></script>
+        <script src="{% static 'js/role.js' %}"></script>
         
 <!--        
         <script src="{% static 'js/permission.js' %}"></script>
