--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/xoretw_ui/spinner.css' %}">
         <style>
             #digraph {
                 width: 100%;
@@ -59,6 +60,10 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <link rel="stylesheet" href="{% static 'css/vis.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/xoretw_ui/font-awesome-4.3.0/css/font-awesome.css' %}">
+        <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
+        
+        
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
     <body>
@@ -109,6 +114,7 @@
         <script src="{% static 'js/scenario.js' %}"></script>
         <script src="{% static 'js/step.js' %}"></script>
         <script src="{% static 'js/role.js' %}"></script>
+        <script src="{% static 'js/xoretw_ui/spinner.js' %}"></script>
         
 <!--        
         <script src="{% static 'js/permission.js' %}"></script>
