--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -353,12 +353,13 @@
                     </tbody>
                     </table>
                 {% endif %}
-
+                
+<!--
                 {% if object_type == 77 %}  
                     <br>
                     <p>Placeholder for Permissions</p>                
                 {% endif %}
-
+-->
                 {% if object_type == 8 %}
                     <table data-toggle="table" id="testtable" class="table table-condensed table-hover">
                     <thead>
@@ -384,7 +385,7 @@
                     {% endfor %}
                     
                     </tbody>
-                    </table>
+                    </table>                    
                 {% endif %}
 
                 {% if object_type == 9 %} 
@@ -401,22 +402,37 @@
                     </tr>
                     </thead>
                     <tbody>
-                    
                     {% for role in roles %}
                         <tr id='role-{{role.id}}'>
                         <th scope="row">{{forloop.counter}}</th>
-                        <td data-toggle="context" data-target="#context-menu">{{role.name}}</td>
+                        <td data-toggle="context" data-target="#context-menu-role-{{role.id}}">{{role.name}}</td>
+                        <!-- <td data-toggle="context" data-target="#context-menu">{{role.name}}</td> -->
                         <td>
                             <div class="btn-group" role="group" aria-label="First group">
-                                <a class="btn" onclick="edit_role({{role.id}});" href="#" role="button" title='Edit role'><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                                <a class="btn" onclick="delete_role({{role.id}});" href="#" role="button" title='Delete role'><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                                <a class="btn" onclick="edit_role({{role.id}})" href="#" role="button" title='Edit role'><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+                                <a class="btn" onclick="delete_role({{role.id}})" href="#" role="button" title='Delete role'><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
                             </div>                
                         </td>
                         </tr>
                     {% endfor %}
-                    
                     </tbody>
                     </table>
+                    <!-- permission context menu -->
+                    {% for role in roles %}
+                        <div id="context-menu-role-{{role.id}}">
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a tabindex="-1" href="#" onclick="role_perm_role_assignment({{role.id}})">Create Role</a></li>
+                            <li><a id="perm_cardinality_constraint" href="#" onclick="role_perm_role_assignment({{role.id}})">Permission/Role Assignment</a></li>
+                            <li><a tabindex="-1" href="#" onclick="role_role_assignment({{role.id}})">Role/Role Assignment</a></li>
+                            <li><a tabindex="-1" href="#" onclick="role_ssd_role_constraints({{role.id}})">SSD Role Constraints</a></li>
+                            <li><a tabindex="-1" href="#" onclick="role_cardinality_constraints({{role.id}})">Role Cardinalities</a></li>
+                            <li><hr style="margin:5px;"></li>
+                            <li><a tabindex="-1" href="#" onclick="">Manage Traces</a></li>
+                            <li><hr style="margin:5px;"></li>
+                            <li><a tabindex="-1" href="#" onclick="delete_role({{role.id}})">Delete Role</a></li>
+                          </ul>
+                        </div>                    
+                    {% endfor %}
                 {% endif %}
         </div>
     </div>
@@ -427,7 +443,7 @@
 <!--                 Modals                       -->
 <!-------------------------------------------------->
 
-<!-- 1. Create Objective Modal -->
+<!-- objective modal -->
 <div class="modal fade" id="objective_modal" tabindex="-1" role="dialog" aria-labelledby="objective_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content modal-content-width-450" >
@@ -501,7 +517,7 @@
   </div>
 </div>
 
-<!-- 2. Create Obstacle Modal -->
+<!-- obstacle modal -->
 <div class="modal fade" id="obstacle_modal" tabindex="-1" role="dialog" aria-labelledby="obstacle_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content modal-content-width-450">
@@ -563,7 +579,7 @@
   </div>
 </div>
 
-<!-- 3. Create Condition Modal -->
+<!-- condition modal -->
 <div class="modal fade" id="condition_modal" tabindex="-1" role="dialog" aria-labelledby="condition_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content modal-content-width-450">
@@ -592,7 +608,7 @@
   </div>
 </div>
 
-<!-- 4. Context Constraint Modal -->
+<!-- context constraint modal -->
 <div class="modal fade" id="constraint_modal" tabindex="-1" role="dialog" aria-labelledby="constraint_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content modal-content-width-450">
@@ -640,7 +656,7 @@
   </div>
 </div>
 
-<!-- 5. Create Scenario Modal -->
+<!-- scenario modal -->
 <div class="modal modal-wide fade" id="scenario_modal" tabindex="-1" role="dialog" aria-labelledby="scenario_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -698,10 +714,6 @@
                 </div>
                 <div class="col-md-2">
                     <button id="scenario_modal_clear_graph" type="button" class="btn btn-default pull-right" >Clear graph</button>
-<!--                    <button id="scenario_modal_select_mode" type="button" class="btn btn-default pull-right" data-toggle="button" aria-pressed="false" autocomplete="off">Select mode</button>
-                    <button id="scenario_modal_edit_mode" type="button" class="btn btn-default pull-right" data-toggle="button" aria-pressed="false" autocomplete="off">Edit mode</button>
-    -->                
-                    <!-- <a href="#" class="btn btn-default pull-right">Clear graph</a> -->
                 </div>
             </div>
         </div>
@@ -850,7 +862,7 @@
 </div>
 
 
-<!-- 9. Create Role Modal -->
+<!-- role modal -->
 <div class="modal fade" id="role_modal" tabindex="-1" role="dialog" aria-labelledby="role_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content modal-content-width-450">
@@ -894,7 +906,7 @@
                     <label for="role_junior_roles">Junior Roles</label>
                     <select id="role_junior_roles" multiple class="form-control">
                     </select>     
-                    <input id="role_remove_junior_role" class="btn btn-default" type="button" disabled="false" value="Remove Junior-Role">     
+                    <input id="role_remove_junior_role" class="btn btn-default" type="button" disabled="true" value="Remove Junior-Role">     
                   </div>
                 </div>  
             </div>
@@ -1212,7 +1224,6 @@
             </div>
         </form>      
       </div>
-      
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button id="save_task_btn" type="button" class="btn btn-primary">Save</button>
@@ -1221,9 +1232,57 @@
   </div>
 </div>
 
-
 <!-- context menu modals -->
+<!-- role - cardinality constraints -->
+<div class="modal fade" id="role_cardinality_constraints_modal" tabindex="-1" role="dialog" aria-labelledby="role_cardinality_constraints_modal_title" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="role_cardinality_constraints_modal_title">Role Cardinality Constraints</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+            <input type="hidden" id="cardinality_constraint_role_id" value="">
+            <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label for="step_actor">Minimum Owner Cardinality</label>
+                    <div class="input-group spinner">
+                      <input id="role_cardinality_constraints_mincardinality" type="text" class="form-control" value="0">
+                        <div class="input-group-btn-vertical">
+                          <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
+                          <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
+                        </div>
+                    </div>      
+                  </div>
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label for="step_actor">Maximum Owner Cardinality</label>
+                    <div class="input-group spinner2">
+                      <input id="role_cardinality_constraints_maxcardinality" type="text" class="form-control" value="0">
+                        <div class="input-group-btn-vertical">
+                          <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
+                          <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
+                        </div>
+                    </div>      
+                  </div>
+                </div>  
+            </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="save_role_cardinality_constraints" type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- perm - cardinality constraints -->
 <div class="modal fade" id="perm_cardinality_constraints_modal" tabindex="-1" role="dialog" aria-labelledby="perm_cardinality_constraints_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -1238,7 +1297,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="step_actor">Minimum Owner Cardinality</label>
-                    <div id="min_spinner" class="input-group spinner">
+                    <div class="input-group spinner">
                       <input id="perm_cardinality_constraints_mincardinality" type="text" class="form-control" value="0">
                         <div class="input-group-btn-vertical">
                           <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
@@ -1252,7 +1311,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="step_actor">Maximum Owner Cardinality</label>
-                    <div id="spinner2" class="input-group spinner2">
+                    <div class="input-group spinner2">
                       <input id="perm_cardinality_constraints_maxcardinality" type="text" class="form-control" value="0">
                         <div class="input-group-btn-vertical">
                           <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
@@ -1262,6 +1321,7 @@
                   </div>
                 </div>  
             </div>
+        </form>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button id="save_perm_cardinality_constraints" type="button" class="btn btn-primary">Save</button>
@@ -1271,16 +1331,15 @@
 </div>
 
 
-
-
 {% endblock content %}
 
 {% block scripts %}
 <script>
 // onready
 $(function() {
- 
+     
 });
+
 var MODE_CREATE = 1;
 var MODE_UPDATE = 2;
 
@@ -1307,6 +1366,7 @@ var OBJECT_TYPE_TASK = 8
 var OBJECT_TYPE_WORK_PROFILE = 9
 var OBJECT_TYPE_ROLE = 10
 var PERM_CARDINALITY_CONSTRAINT = 100
+var ROLE_CARDINALITY_CONSTRAINT = 101
 
 
 // common to all
@@ -1325,6 +1385,8 @@ var url_get_steps = "{% url 'get_steps' %}"
 var url_get_scenarios = "{% url 'get_scenarios' %}"
 var url_get_roles = "{% url 'get_roles' %}"
 var url_get_perm_cardinality_constraints = "{% url 'get_perm_cardinality_constraints' %}"
+var url_get_role_cardinality_constraints = "{% url 'get_role_cardinality_constraints' %}"
+url_get_role_cardinality_constraints
 
 
 var url_delete_objective = "{% url 'delete_objective' %}"
@@ -1352,20 +1414,5 @@ jQuery.fn.extend({
     });
   }
 });
-  /*
-$('#perm_table').on('contextmenu', 'tr', function(e) {
-    e.preventDefault();
-    alert(this.id);
-    
-var htmlstring = '<div id="context-menu-permission-2"><ul class="dropdown-menu" role="menu"><li><a tabindex="-1" onclick="test(' + String(this.id) + ')">Create Permission</a></li><li><hr style="margin:5px;"></li> </ul></div>'
-$( "body" )
-  .html( htmlstring);
-
-});
-*/
-
-</script>
-<script>
- 
 </script>
 {% endblock scripts %}
